Fix overflow in event logs for long actor and object names

--- a/app/eventyay/static/pretixcontrol/scss/main.scss
+++ b/app/eventyay/static/pretixcontrol/scss/main.scss
@@ -1197,3 +1197,7 @@ h1 .label {
         background-image: url(static('leaflet/images/marker-icon.png'));
     }
 }
+.log-break-word {
+    overflow-wrap: break-word;
+    word-break: break-all;
+}
